generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgres"
  url      = env("DATABASE_URL")
}

enum Role {
  ADMIN
  USER
}

model user {
  id        String        @id @default(cuid())
  name      String
  username  String        @unique
  email     String        @unique
  image     String?
  password  String
  bio       String?
  createdAt DateTime      @default(now())
  role      Role          @default(USER)
  art       savedart[]
  museum    savedmuseum[]
  artist    savedartist[]
}

enum SavedType {
  FAV
  SAVE
}

model savedart {
  id     String    @id @default(cuid())
  type   SavedType
  user   user?     @relation(fields: [userId], references: [id])
  userId String?
  art    art?      @relation(fields: [artId], references: [id])
  artId  String?
}

model savedmuseum {
  id       String    @id @default(cuid())
  type     SavedType
  user     user?     @relation(fields: [userId], references: [id])
  userId   String?
  museum   museum?   @relation(fields: [museumId], references: [id])
  museumId String?
}

model savedartist {
  id       String    @id @default(cuid())
  type     SavedType
  user     user?     @relation(fields: [userId], references: [id])
  userId   String?
  artist   artist?   @relation(fields: [artistId], references: [id])
  artistId String?
}

model museum {
  id          String        @id @default(cuid())
  name        String
  location    String
  description String
  contacts    String
  image       Int
  arts        art[]
  savedby     savedmuseum[]
}

model art {
  id          String     @id @default(cuid())
  name        String
  image       String
  category    String
  artist      artist?    @relation(fields: [artistid], references: [id])
  artistid    String?
  description String     @db.Text
  museum      museum?    @relation(fields: [museumid], references: [id])
  museumid    String?
  savedby     savedart[]
}

model artist {
  id          String        @id @default(cuid())
  name        String
  image       Int?
  description String
  arts        art[]
  savedby     savedartist[]
}
